--- a/Quadratures.ipynb
+++ b/Quadratures.ipynb
@@ -20,21 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/Project.toml`\n",
-      " \u001b[90m [1fd47b50]\u001b[39m\u001b[92m + QuadGK v2.0.3\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pkg.add(\"QuadGK\")\n",
     "using QuadGK\n",
@@ -808,6 +796,182 @@
    "source": [
     "count_gauss(x->x^4, 2)\n",
     "# should be 0.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b> Zadanie 3 </b> <br>\n",
+    "Skorzystaj z rozwiązania zadania 2 do napisania funkcji \n",
+    "liczącej  całki w dowolnym przedziale $\\int_{a}^{b} f(x) dx$ \n",
+    "\n",
+    "dokonując normalizacji  do $\\int_{-1}^{1} F(z) dz$ \n",
+    "\n",
+    "podstawiając:\n",
+    "\n",
+    "$x=\\frac{b+a}{2}+ \\frac{b-a}{2} z $ oraz \n",
+    "\n",
+    "$dx =\\frac{b-a}{2} dz $\n",
+    "\n",
+    "Przetestuj działanie na kilku przykładach i sprawdź z wynikami otrzymanymi analitycznie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "my_integral (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function count_gauss(f, k)\n",
+    "    (xp,a)=gauss(Float64,k)\n",
+    "    sum(a .* f.(xp))\n",
+    "end\n",
+    "\n",
+    "function normalize(f::Function, a, b)\n",
+    "      return z -> ((b-a)/2)*f((a+b)/2 + (b-a)*z/2)\n",
+    "end\n",
+    "\n",
+    "function my_integral(f, a, b, k)\n",
+    "    g = normalize(f, a, b)\n",
+    "    count_gauss(g,k)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_integral(x->x^2, -2, 1, 3)\n",
+    "#ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48796.12500000004"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_integral(x->x^7, -2, 5, 7)\n",
+    "#ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59254.12500000005"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_integral(x->x^7 + 4*x^5 + 12, -2, 5, 7)\n",
+    "#ok"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Głowną funkcją pakietu QuadGK jest adaptacyjna funkcja <a href=\"https://juliamath.github.io/QuadGK.jl/stable/#QuadGK.quadgk\"> quadgk</a> używająca całkowania  Gauss-Kronroda\n",
+    "\n",
+    "- użyj tej funkcji do policzenia  całki dla przykładowego wielomianu.\n",
+    "- funkcja ta ma możliwość liczenia również całek do nieskończoności\n",
+    " Policz całkę od minus do plus nieskonczonosci \n",
+    " standardowego rozkładu normalnego Gaussa\n",
+    "$ \\frac{1}{\\sqrt{2\\pi}}exp(\\frac{-x^2}{2})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23.999999999999968, 3.907985046680551e-14)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quadgk(x->x^5+x^3+12*x+4, -3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0000000000032583, 1.4395584941504537e-8)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quadgk(x -> (1/sqrt(2*pi))*exp(-(x^2)/2), -Inf, Inf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Zadanie 5\n",
+    "Napisz własną funkcję całkującą metodą prostokątów albo trapezów. Narysuj wykres funkcji błędu w stosunku do wyniku otrzymanego analitycznie w zaleznosci od ilosci potrzebnych przedziałów dla przykładowego wielomianu."
    ]
   }
  ],
