--- a/Quadratures.ipynb
+++ b/Quadratures.ipynb
@@ -973,6 +973,205 @@
     "Zadanie 5\n",
     "Napisz własną funkcję całkującą metodą prostokątów albo trapezów. Narysuj wykres funkcji błędu w stosunku do wyniku otrzymanego analitycznie w zaleznosci od ilosci potrzebnych przedziałów dla przykładowego wielomianu."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "trapezoidal (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function trapezoidal(a, b, n, f)\n",
+    "    h = (b - a) / n\n",
+    "    s = f(a) + f(b)\n",
+    "    for i = 1:n\n",
+    "        s += 2 * f(a + i * h)\n",
+    "    end\n",
+    "    return (h / 2 * s)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"400\" viewBox=\"0 0 2400 1600\">\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip5900\">\n",
+       "    <rect x=\"0\" y=\"0\" width=\"2000\" height=\"2000\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip5901\">\n",
+       "    <rect x=\"0\" y=\"0\" width=\"2400\" height=\"1600\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<polygon clip-path=\"url(#clip5901)\" points=\"\n",
+       "0,1600 2400,1600 2400,0 0,0 \n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip5902\">\n",
+       "    <rect x=\"480\" y=\"0\" width=\"1681\" height=\"1600\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<polygon clip-path=\"url(#clip5901)\" points=\"\n",
+       "184.243,1440.48 2321.26,1440.48 2321.26,47.2441 184.243,47.2441 \n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip5903\">\n",
+       "    <rect x=\"184\" y=\"47\" width=\"2138\" height=\"1394\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  224.36,1440.48 224.36,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  733.465,1440.48 733.465,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  1242.57,1440.48 1242.57,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  1751.67,1440.48 1751.67,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  2260.78,1440.48 2260.78,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  184.243,1408.49 2321.26,1408.49 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  184.243,1041.32 2321.26,1041.32 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  184.243,674.15 2321.26,674.15 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  184.243,306.978 2321.26,306.978 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  184.243,1440.48 2321.26,1440.48 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  184.243,1440.48 184.243,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  224.36,1440.48 224.36,1419.58 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  733.465,1440.48 733.465,1419.58 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1242.57,1440.48 1242.57,1419.58 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1751.67,1440.48 1751.67,1419.58 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  2260.78,1440.48 2260.78,1419.58 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  184.243,1408.49 216.298,1408.49 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  184.243,1041.32 216.298,1041.32 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  184.243,674.15 216.298,674.15 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  184.243,306.978 216.298,306.978 \n",
+       "  \"/>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 224.36, 1494.48)\" x=\"224.36\" y=\"1494.48\">0</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 733.465, 1494.48)\" x=\"733.465\" y=\"1494.48\">25</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 1242.57, 1494.48)\" x=\"1242.57\" y=\"1494.48\">50</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 1751.67, 1494.48)\" x=\"1751.67\" y=\"1494.48\">75</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 2260.78, 1494.48)\" x=\"2260.78\" y=\"1494.48\">100</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 160.243, 1425.99)\" x=\"160.243\" y=\"1425.99\">0</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 160.243, 1058.82)\" x=\"160.243\" y=\"1058.82\">1</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 160.243, 691.65)\" x=\"160.243\" y=\"691.65\">2</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 160.243, 324.478)\" x=\"160.243\" y=\"324.478\">3</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:66px; text-anchor:middle;\" transform=\"rotate(0, 1252.75, 1590.4)\" x=\"1252.75\" y=\"1590.4\">n</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:66px; text-anchor:middle;\" transform=\"rotate(-90, 57.6, 743.863)\" x=\"57.6\" y=\"743.863\">error</text>\n",
+       "</g>\n",
+       "<polyline clip-path=\"url(#clip5903)\" style=\"stroke:#009af9; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  244.724,86.6754 265.088,821.018 285.453,1059.76 305.817,1165.24 326.181,1223.09 346.545,1259.21 366.909,1283.77 387.274,1301.5 407.638,1314.87 428.002,1325.31 \n",
+       "  448.366,1333.67 468.73,1340.52 489.094,1346.22 509.459,1351.05 529.823,1355.19 550.187,1358.78 570.551,1361.91 590.915,1364.68 611.28,1367.13 631.644,1369.33 \n",
+       "  652.008,1371.31 672.372,1373.09 692.736,1374.72 713.1,1376.2 733.465,1377.55 753.829,1378.8 774.193,1379.95 794.557,1381.02 814.921,1382.01 835.286,1382.93 \n",
+       "  855.65,1383.79 876.014,1384.59 896.378,1385.34 916.742,1386.05 937.106,1386.71 957.471,1387.34 977.835,1387.93 998.199,1388.49 1018.56,1389.02 1038.93,1389.52 \n",
+       "  1059.29,1390 1079.66,1390.45 1100.02,1390.89 1120.38,1391.3 1140.75,1391.69 1161.11,1392.07 1181.48,1392.43 1201.84,1392.77 1222.2,1393.1 1242.57,1393.41 \n",
+       "  1262.93,1393.72 1283.3,1394.01 1303.66,1394.29 1324.03,1394.56 1344.39,1394.82 1364.75,1395.07 1385.12,1395.31 1405.48,1395.54 1425.85,1395.76 1446.21,1395.98 \n",
+       "  1466.58,1396.19 1486.94,1396.39 1507.3,1396.59 1527.67,1396.78 1548.03,1396.96 1568.4,1397.14 1588.76,1397.31 1609.12,1397.48 1629.49,1397.64 1649.85,1397.8 \n",
+       "  1670.22,1397.96 1690.58,1398.1 1710.95,1398.25 1731.31,1398.39 1751.67,1398.53 1772.04,1398.66 1792.4,1398.79 1812.77,1398.92 1833.13,1399.04 1853.49,1399.16 \n",
+       "  1873.86,1399.28 1894.22,1399.39 1914.59,1399.5 1934.95,1399.61 1955.32,1399.72 1975.68,1399.82 1996.04,1399.92 2016.41,1400.02 2036.77,1400.12 2057.14,1400.21 \n",
+       "  2077.5,1400.3 2097.86,1400.39 2118.23,1400.48 2138.59,1400.57 2158.96,1400.65 2179.32,1400.74 2199.69,1400.82 2220.05,1400.9 2240.41,1400.98 2260.78,1401.05 \n",
+       "  \n",
+       "  \"/>\n",
+       "<polygon clip-path=\"url(#clip5901)\" points=\"\n",
+       "1642.82,251.724 2249.26,251.724 2249.26,130.764 1642.82,130.764 \n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1642.82,251.724 2249.26,251.724 2249.26,130.764 1642.82,130.764 1642.82,251.724 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip5901)\" style=\"stroke:#009af9; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1666.82,191.244 1810.82,191.244 \n",
+       "  \"/>\n",
+       "<g clip-path=\"url(#clip5901)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:start;\" transform=\"rotate(0, 1834.82, 208.744)\" x=\"1834.82\" y=\"208.744\">Trapezoidal error</text>\n",
+       "</g>\n",
+       "</svg>\n"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using Plots\n",
+    "\n",
+    "x_s = collect(1:1:100)\n",
+    "\n",
+    "# x_s = [10, 100, 1000, 10000, 1000000, 1000000]\n",
+    "y_s = [abs(0.4 - trapezoidal(-1, 1, x_i, x->x^4)) for x_i in x_s]\n",
+    "plot(x_s, y_s, label=\"Trapezoidal error\", xlabel=\"n\", ylabel=\"error\")\n"
+   ]
   }
  ],
  "metadata": {
